# dx4j

./: .gitignore  .gitmodules  build.gradle  settings.gradle
.github/workflows/: gradle.yml
dx4j-test/: build.gradle
dx4j-test/src/main/java/com/jnngl/dx4j/test/: Test.java
src/main/java/com/jnngl/dx4j/: Dx4j.java
src/main/java/com/jnngl/dx4j/common/: Memory.java  Pointer.java  Validations.java
src/main/java/com/jnngl/dx4j/glfw/: GLFW.java  GLFWcharfun.java  GLFWcharmodsfun.java  GLFWcursor.java  GLFWcursorenterfun.java  GLFWcursorposfun.java  GLFWdropfun.java  GLFWerrorfun.java  GLFWframebuffersizefun.java  GLFWgamepadstate.java  GLFWgammaramp.java  GLFWimage.java  GLFWjoystickfun.java  GLFWkeyfun.java  GLFWmonitor.java  GLFWmonitorfun.java  GLFWmousebuttonfun.java  GLFWscrollfun.java  GLFWvidmode.java  GLFWwindow.java  GLFWwindowclosefun.java  GLFWwindowcontentscalefun.java  GLFWwindowfocusfun.java  GLFWwindowiconifyfun.java  GLFWwindowmaximizefun.java  GLFWwindowposfun.java  GLFWwindowrefreshfun.java  GLFWwindowsizefun.java
src/main/native/: CMakeLists.txt
src/main/native/include/: callback_utils.h
src/main/native/src/: glfw_wrapper.cpp  test.cpp
